# sldp

./: .gitignore  BASELINE_ENVIRONMENT.md  IMPLEMENTATION_PLAN.MD  MAINTAINABILITY_CHECKPOINT.md  README.md  pyproject.toml  setup.cfg
scripts/: generate_phase1_fixture.py
src/sldp/: _regression_workflow.py  annotation.py  chunkstats.py  dataset.py  fs.py  memo.py  preprocessannot.py  preprocesspheno.py  preprocessrefpanel.py  pretty.py  sldp.py  storyteller.py  weights.py  workflow_io.py
src/sldp/core/: chunkstats.py  processed_inputs.py  regression.py  weights.py
src/sldp/io/: annotation.py  dataset.py
src/sldp/utils/: config.py  fs.py  memo.py  multiproc.py  pretty.py
tests/: README.md  test_annotation.py  test_chunkstats.py  test_chunkstats_signflip.py  test_config.py  test_dataset.py  test_local_helpers.py  test_phase1_regression.py  test_preprocessannot.py  test_preprocesspheno.py  test_preprocessrefpanel.py  test_sldp_helpers.py  test_sldp_preprocessing_hooks.py  test_weights.py
tests/current/: test_annotation.py  test_chunkstats.py  test_chunkstats_signflip.py  test_cli_num_proc.py  test_config.py  test_dataset.py  test_local_helpers.py  test_multiproc.py  test_preprocessannot.py  test_preprocesspheno.py  test_preprocessrefpanel.py  test_processed_inputs.py  test_regression.py  test_sldp_helpers.py  test_sldp_preprocessing_hooks.py  test_storyteller.py  test_weights.py  test_workflow_io.py
tests/equivalence/: helpers.py  test_phase1_live_baseline.py  test_phase1_regression.py
tests/fixtures/: README.md
tests/fixtures/phase1_tiny/: README.md  (+1 more)
(+20 files in other folders)
